# Rastreador

./: .gitignore  CMakeLists.txt  README.md  Rastreador.cpp  Rastreador.h
include/analyzer/: BottleneckAnalyzer.hpp
include/collector/: ETWMonitor.hpp  IDataCollector.hpp  ProcessMonitor.hpp  SystemMonitor.hpp
include/common/: types.hpp
include/core/: Monitor.hpp
include/display/: ConsoleDisplay.hpp  IDisplay.hpp  OverlayDisplay.hpp
include/tray/: TrayIcon.hpp
resources/: resource.h  resource.rc
src/: Rastreador.cpp
src/analyzer/: BottleneckAnalyzer.cpp
src/collector/: ETWMonitor.cpp  ProcessMonitor.cpp  SystemMonitor.cpp
src/core/: Monitor.cpp
src/display/: ConsoleDisplay.cpp  OverlayDisplay.cpp
src/tray/: TrayIcon.cpp
